Updated report controller
